--- a/files/log4j.properties
+++ b/files/log4j.properties
@@ -1,4 +1,4 @@
-# From http://tomcat.apache.org/tomcat-8.0-doc/logging.html#Using_Log4j
+# Stolen from http://tomcat.apache.org/tomcat-8.0-doc/logging.html#Using_Log4j
 
 log4j.rootLogger = INFO, CATALINA
 
