Migrated from puppet-staging to puppet-archive.
Testing against Fedora 23 and path /usr/share/tomcat8 for F21 is deprecated

Fixed requirement for puppet/archive

Removed old merge marks

Testing against Fedora 23 and path /usr/share/tomcat8 for F21 is deprecated

Fixed requirement for puppet/archive

Update repo package versions

Removed addition to spec_helper.rb

Update repo package versions

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,7 +2,7 @@ fixtures:
   forge_modules:
     concat: puppetlabs/concat
     firewall: puppetlabs/firewall
-    staging: nanliu/staging
+    archive: puppet/archive
     stdlib: puppetlabs/stdlib
   symlinks:
     tomcat: "#{source_dir}"
