--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,18 @@
 ---
 language: ruby
+rvm:
+  - 1.9.3
+  - 2.0.0
+  - 2.1.10
+  - 2.2.5
+  - 2.3.1
+env:
+  - PUPPET_GEM_VERSION="~> 3.7"
+  - PUPPET_GEM_VERSION="~> 4.0"
 matrix:
+  exclude:
+    - rvm: 2.2.5
+      env: PUPPET_GEM_VERSION="~> 3.7"
+    - rvm: 2.3.1
+      env: PUPPET_GEM_VERSION="~> 3.7"
   fast_finish: true
