--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,18 @@ rvm:
   - 2.2.5
   - 2.3.1
 env:
-  - PUPPET_GEM_VERSION="~> 3.7"
-  - PUPPET_GEM_VERSION="~> 4.0"
+  - PUPPET_GEM_VERSION="~> 3.7.0"
+  - PUPPET_GEM_VERSION="~> 3.8.0"
+  - PUPPET_GEM_VERSION="~> 4.4.0"
+  - PUPPET_GEM_VERSION="~> 4.5.0"
 matrix:
   exclude:
     - rvm: 2.2.5
-      env: PUPPET_GEM_VERSION="~> 3.7"
+      env: PUPPET_GEM_VERSION="~> 3.7.0"
     - rvm: 2.3.1
-      env: PUPPET_GEM_VERSION="~> 3.7"
+      env: PUPPET_GEM_VERSION="~> 3.7.0"
+    - rvm: 2.2.5
+      env: PUPPET_GEM_VERSION="~> 3.8.0"
+    - rvm: 2.3.1
+      env: PUPPET_GEM_VERSION="~> 3.8.0"
   fast_finish: true
